# pipelines

./: .cloudbuild.yaml  BUILD.bazel  local-testing.go  server-testing.go
backend/: .dockerignore.visualization  Dockerfile.visualization  Dockerfile.visualizations
backend/api/: visualization.proto
backend/api/go_client/: visualization.pb.go
backend/api/swagger/: visualization.swagger.json
backend/src/apiserver/: client_manager.go  main.go
backend/src/apiserver/resource/: resource_manager.go
backend/src/apiserver/server/: BUILD.bazel  visualization_server.go
backend/src/apiserver/storage/: object_store_util.go
backend/src/apiserver/visualization/: exporter.py  server.py  table.py
backend/src/apiserver/visualization_components/: Dockerfile  build_image.sh
backend/src/apiserver/visualizations/: confusion_matrix.py  deployment.yaml  exporter.py  roc.py  schema.json  server.py  service.yaml  tfdv.py  tfma.py  visualizer.py
components/local/proc/: Dockerfile  build_image.sh  component.yaml
components/local/proc/src/: exporter.py  proc.py  test.py
frontend/: package-lock.json  package.json
frontend/mock-backend/: mock-api-middleware.ts
frontend/mock-backend/eval-output/: metadata.json  python-vis.html
frontend/public/: datatables.js
frontend/src/apis/job/: api.ts
frontend/src/components/: Editor.test.tsx
frontend/src/lib/: Apis.ts  OutputArtifactLoader.ts
frontend/src/pages/: RunDetails.tsx
manifests/kustomize/: namespaced-install.yaml
manifests/kustomize/base/: kustomization.yaml
samples/xgboost-spark/: xgboost-training-cm-testing.py
(+22 files in other folders)
